--- a/bib1.bib
+++ b/bib1.bib
@@ -539,5 +539,11 @@
 	year = "2001"
 }
 
+@article{millerlamb2015,
+	author = "Miller, M. Coleman and Lamb, Frederick K.",
+	journal = "Astrophys.J., 808, 1, 31, 20",
+	title = "{Determining Neutron Star Properties by Fitting Oblate-star Waveform Models to X-Ray Burst Oscillations}",
+	year = "2015"
+}
 
 
